Add-some-images

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -4,11 +4,103 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Summer concert</title>
+    <title>Piano Concert</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/desktop.css">
 </head>
+<header>
 
-<body>
+    <body>
+        <nav class="icon-nav">
+            <ul class="for-icon-nav">
+                <li>
+                    <a href="#"><img src="images/fb.png" alt="blue-mark"></a>
+                </li>
+                <li>
+                    <a href="#"><img src="images/twitter.png" alt="blue-bird"></a>
+                </li>
+                <li>
+                    <a href="#">English</a>
+                </li>
+                <li>
+                    <a href="#">My Page</a>
+                </li>
+                <li>
+                    <a href="#">Log out</a>
+                </li>
+            </ul>
 
-</body>
+        </nav>
+</header>
+<div class="container">
+
+    <nav class="lower-nav">
+        <img class="music-logo" src="images/piano logo.png" alt="logo">
+        <ul class="for-desk-nav" id="for-desk-nav">
+            <li>
+                <img id="" src="images/close_FILL0_wght400_GRAD0_opsz48.png" alt="">
+            </li>
+            <li><a href="index.html" class="" id="">Home</a></li>
+            <li>
+                <a href="#">Program</a></li>
+            <li><a href="#">Tickets</a></li>
+            <li><a href="#">Sponsors</a></li>
+            <li><button class="for-border">Summer concert</button></li>
+        </ul>
+    </nav>
+
+    <div class="dolphin">
+        <img src="/images/hamburger.svg" alt="" class="ham-burger" id="burger">
+        <div class="blue">
+            <h2>Hello pinao world!</h2>
+            <h2>Piano Concert 2023</h2>
+        </div>
+        <div class="lorem">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum tempore aliquid est minus odit vero facere necessitatibus voluptatem blanditiis, perferendis ducimus quo, cum fugit eligendi, sint vitae officiis. Nostrum cum sit quam consequuntur vel modi
+                nam distinctio architecto earum praesentium repellendus mollitia voluptatum voluptate cupidit
+            </p>
+        </div>
+        <div class="question">
+            <p>Do you have any questions with our concert?</p>
+            <a class="email" href="https://mail.google.com/mail/u/0/#inbox">hsuwady2001@gmail.com</a>
+        </div>
+    </div>
+    <section class="white">
+        <h2 class="event-concert">Piano Concert 2023 Event
+        </h2>
+        <div class="design"></div>
+        <div class="design-two"></div>
+        <p class=" ipsum "> Delve into the captivating stories from our previous summer concerts held in diverse locations. Experience the mesmerizing melodies that filled the air, creating an enchanting ambiance for all attendees.
+            <br><br> These extraordinary events showcased the power of music and unity within our own local community. Immerse yourself in the inspiring narratives of these memorable gatherings, where the spirit of music and the joy of cultural exchange
+            seamlessly intertwined.
+        </p>
+        <img class="align " src=" /images/piano logo.png " alt="music-logo ">
+        <hr>
+        <section>
+            <h2 class="event-concert ">Discovers previous piano concert</h2>
+            <div class="design"></div>
+            <div class=" design-two"></div>
+
+            <p class="ipsum">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum sint quas fuga dignissimos expedita impedit possimus deserunt hic in facere?
+                <br><br> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus sapiente facilis beatae praesentium quia maiores! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi nesciunt et delectus, doloremque minus perspiciatis.
+            </p>
+            <div class="concert-photo ">
+                <ul class="for-2022 ">
+                    <li class="for-2023 for-desk-img "> <img src="/images/2022 (1).jpeg " alt="2022 concert "></li>
+                    <li class="for-desk-img "><img src="/images/2022 (2).jpeg " alt="2023 concert "></li>
+                </ul>
+            </div>
+        </section>
+        <section class="final ">
+            <img class="music " src="images/piano logo.png " alt="piano-logo ">
+            <div class="reserve ">
+                <p>2023 Creative Common Myanmar Center,somes right reserved</p>
+                <span>사랑하는 친구에게,오랜만에 펜을 들어 글을 쓰는 순간, 당신이 떠올랐습니다. 얼마나 그리웠던지 몰라요</span>
+            </div>
+        </section>
+        <script src=" /index.js "></script>
+        </body>
 
 </html>
