--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <header>
 
     <body>
+
         <nav class="icon-nav">
             <ul class="for-icon-nav">
                 <li>
@@ -32,21 +33,17 @@
 
         </nav>
 </header>
-<div class="container">
+<div class="container-two">
     <nav class="lower-nav">
         <span class="menu" id="menu">
-<ul class="hamburger">
-    <li class="bar"></li>
-    <li class="bar"></li>
-    <li class="bar"></li>
-</ul>
-    </span>
-        <img class="music-logo" src="images/piano logo.png" alt="logo">
-        <ul class="for-desk-nav" id="for-desk-nav">
+            <img src="/images/hamburger.svg" class="burger" id="burger" alt="burger-icon">
+        </span>
+        <img class="music-logo" src="images/piano logo.png" alt="logo ">
+        <ul class="for-desk-nav" id="for-nav">
             <li>
-                <img id="" src="images/close_FILL0_wght400_GRAD0_opsz48.png" alt="">
+                <img class="close-btn" src="" alt=" ">
             </li>
-            <li><a href="aboutpage.html" class="" id="">About</a></li>
+            <li><a href="aboutpage.html" class=" " id=" ">About</a></li>
             <li>
                 <a href="#">Program</a></li>
             <li><a href="#">Tickets</a></li>
@@ -54,8 +51,10 @@
             <li><button class="for-border">Summer concert</button></li>
         </ul>
     </nav>
+
     <section class="concert-introduction">
         <div class="to-move">
+            <img src="/images/hamburger.svg" alt="" class="ham-burger-two">
             <h4 class="first-content">Hello Piano World!</h4>
             <div class="content">
                 <h1>PIANO CONCERT</h1>
@@ -76,15 +75,41 @@
 <section class="pattern-bg">
     <div class="desk-flex">
         <h3 class="white-design">Main Program</h3>
+        <div class="design-three"></div>
         <div class="line-main-pg"></div>
     </div>
-    <div class="card-forum"></div>
-    <a class="see-detail">See detail program</a>
+    <div class="card-forum" id="my-forum"></div>
+    <div class="see-detail">
+        <a>See detail program</a>
+    </div>
 </section>
-
-
-
-<script src="/index.js"></script>
+<section class="player">
+    <h2 class="Featured-artist">Featured Artists</h2>
+    <div class="design-two"></div>
+    <div class="artist-bottom-line"></div>
+    <div class="player-container" id="BTS">
+    </div>
+</section>
+<section class="for-partner">
+    <h3 class="partner">Partners</h3>
+    <div class="design-three"></div>
+    <div class="line-partner"></div>
+    <ul class="burn" id="mozilla">
+        <li class="color-burn"><img src="images/mozilla.png" alt="partner-logo "></li>
+        <li class="color-burn"><img src="images/color-burn.png" alt="partner-logo "></li>
+        <li class="color-burn"><img src="images/rays.png " alt="partner-logo "></li>
+        <li class="color-burn"><img src="images/studio.png" alt="partner-logo "></li>
+        <li class="color-burn"><img src="images/piano logo.png" alt="partner-logo "></li>
+    </ul>
+</section>
+<section class="final-card">
+    <img src="images/piano logo.png" alt="piano-logo" class="music">
+    <div class="reserved ">
+        <p>2023 Creative Common Myanmar Center,somes right reserved</p>
+        <span>사랑하는 친구에게,오랜만에 펜을 들어 글을 쓰는 순간, 당신이 떠올랐습니다. 얼마나 그리웠던지 몰라요</span>
+    </div>
+</section>
+<script src=" /index.js"></script>
 </body>
 
 </html>
