Add-hamburger-button

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -37,9 +37,6 @@
     <nav class="lower-nav">
         <img class="music-logo" src="images/piano logo.png" alt="logo">
         <ul class="for-desk-nav" id="for-desk-nav">
-            <li>
-                <img id="" src="images/close_FILL0_wght400_GRAD0_opsz48.png" alt="">
-            </li>
             <li><a href="index.html" class="" id="">Home</a></li>
             <li>
                 <a href="#">Program</a></li>
@@ -50,7 +47,20 @@
     </nav>
 
     <div class="dolphin">
-        <img src="/images/hamburger.svg" alt="" class="ham-burger" id="burger">
+        <img src="/images/hamburger.svg" alt="" id="menu-two" onclick="toggleMenu()">
+        <nav id="for-hamburger">
+            <ul class="for-style">
+                <li>
+                    <img class="for-close" src="/images/close-button.png" alt="close-button" id="for-close-burger">
+                </li>
+                <li><a href="index.html">Home</a></li>
+                <li>
+                    <a href="#">Program</a></li>
+                <li><a href="#">Tickets</a></li>
+                <li><a href="#">Sponsors</a></li>
+
+            </ul>
+        </nav>
         <div class="blue">
             <h2>Hello pinao world!</h2>
             <h2>Piano Concert 2023</h2>
