--- a/index.html
+++ b/index.html
@@ -35,15 +35,9 @@
 </header>
 <div class="container-two">
     <nav class="lower-nav">
-        <span class="menu" id="menu">
-            <img src="/images/hamburger.svg" class="burger" id="burger" alt="burger-icon">
-        </span>
-        <img class="music-logo" src="images/piano logo.png" alt="logo ">
+        <img class="music-logo" src="images/piano logo.png" alt="logo">
         <ul class="for-desk-nav" id="for-nav">
-            <li>
-                <img class="close-btn" src="" alt=" ">
-            </li>
-            <li><a href="aboutpage.html" class=" " id=" ">About</a></li>
+            <li><a href="aboutpage.html" id=" ">About</a></li>
             <li>
                 <a href="#">Program</a></li>
             <li><a href="#">Tickets</a></li>
@@ -54,7 +48,20 @@
 
     <section class="concert-introduction">
         <div class="to-move">
-            <img src="/images/hamburger.svg" alt="" class="ham-burger-two">
+            <img src="/images/hamburger.svg" alt="" id="menu-two" onclick="toggleMenu()">
+            <nav id="for-hamburger">
+                <ul class="for-style">
+                    <li>
+                        <img class="for-close" src="/images/close-button.png" alt="close-button" id="for-close-burger">
+                    </li>
+                    <li><a href="aboutpage.html" id=" ">About</a></li>
+                    <li>
+                        <a href="#">Program</a></li>
+                    <li><a href="#">Tickets</a></li>
+                    <li><a href="#">Sponsors</a></li>
+
+                </ul>
+            </nav>
             <h4 class="first-content">Hello Piano World!</h4>
             <div class="content">
                 <h1>PIANO CONCERT</h1>
