fix-eslint-error

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <section class="concert-introduction">
         <div class="to-move">
             <img src="/images/hamburger.svg" alt="" id="menu-two" onclick="toggleMenu()">
-            <nav id="for-hamburger">
+            <nav id="for-hamburger" class="menu-hidden">
                 <ul class="for-style">
                     <li>
                         <img class="for-close" src="/images/close-button.png" alt="close-button" id="for-close-burger">
