--- a/aboutpage.html
+++ b/aboutpage.html
@@ -79,36 +79,66 @@
     <section class="white">
         <h2 class="event-concert">Piano Concert 2023 Event
         </h2>
-        <div class="design"></div>
-        <div class="design-two"></div>
+        <div class="artist-bottom-line"></div>
         <p class=" ipsum "> Delve into the captivating stories from our previous summer concerts held in diverse locations. Experience the mesmerizing melodies that filled the air, creating an enchanting ambiance for all attendees.
             <br><br> These extraordinary events showcased the power of music and unity within our own local community. Immerse yourself in the inspiring narratives of these memorable gatherings, where the spirit of music and the joy of cultural exchange
             seamlessly intertwined.
         </p>
-        <img class="align " src=" /images/piano logo.png " alt="music-logo ">
+        <img class="align" src=" /images/piano logo.png " alt="music-logo">
         <hr>
         <section>
-            <h2 class="event-concert ">Discovers previous piano concert</h2>
-            <div class="design"></div>
-            <div class=" design-two"></div>
-
-            <p class="ipsum">
+            <h2 class="event-concert">Discovers previous piano concert</h2>
+            <div class="artist-bottom-line"></div>
+            <p class="to-move">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum sint quas fuga dignissimos expedita impedit possimus deserunt hic in facere?
                 <br><br> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus sapiente facilis beatae praesentium quia maiores! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi nesciunt et delectus, doloremque minus perspiciatis.
             </p>
-            <div class="concert-photo ">
-                <ul class="for-2022 ">
-                    <li class="for-2023 for-desk-img "> <img src="/images/2022 (1).jpeg " alt="2022 concert "></li>
-                    <li class="for-desk-img "><img src="/images/2022 (2).jpeg " alt="2023 concert "></li>
+            <div class="concert-photo">
+                <ul class="for-2022">
+                    <li class="for-2023"> <img src="/images/2022 (1).jpeg " alt="2022 concert "></li>
+                    <li class="for-desk-img"><img src="/images/2022 (2).jpeg " alt="2023 concert "></li>
+                </ul>
+            </div>
+            <div class="photo-sec">
+                <ul>
+                    <li class="for-summer"> <img src="/images/2022 (1).jpeg " alt="2022 concert "></li>
+                    <li class="for-2019"><img src="/images/2022 (2).jpeg " alt="2023 concert "></li>
                 </ul>
             </div>
         </section>
-        <section class="final ">
-            <img class="music " src="images/piano logo.png " alt="piano-logo ">
-            <div class="reserve ">
-                <p>2023 Creative Common Myanmar Center,somes right reserved</p>
-                <span>사랑하는 친구에게,오랜만에 펜을 들어 글을 쓰는 순간, 당신이 떠올랐습니다. 얼마나 그리웠던지 몰라요</span>
+        <section class="for-partner-sec">
+            <h3 class="partner">Partners</h3>
+            <div class="artist-bottom-line"></div>
+            <div class="for-width">
+                <ul class="burn" id="mozilla">
+                    <li class="color-burn"><img src="images/mozilla.png" alt="partner-logo "></li>
+                    <li class="color-burn"><img src="images/color-burn.png" alt="partner-logo "></li>
+                    <li class="color-burn"><img src="images/rays.png " alt="partner-logo "></li>
+                    <li class="color-burn"><img src="images/studio.png" alt="partner-logo "></li>
+                    <li class="color-burn"><img src="images/piano logo.png" alt="partner-logo "></li>
+                </ul>
             </div>
+        </section>
+        <section class="final-card-sec">
+            <ul class="for-footer-sec">
+                <li><img src="images/piano logo.png" alt="piano-logo" class="music"></li>
+                <li class="move-display">
+                    <p>2023 Creative Common Myanmar Center,somes right reserved<br> 사랑하는 친구에게,오랜만에 펜을 들어 글을 쓰는 순간, 당신이 떠올랐습니다. 얼마나 그리웠던지 몰라요</p>
+
+                </li>
+
+            </ul>
+        </section>
+        <section class="card-sec">
+
+            <ul class="for-footer">
+                <li><img src="images/piano logo.png" alt="piano-logo" class="footer-music"></li>
+                <li class="rights">
+                    <p>2023 Creative Common Myanmar Center,somes right reserved</p>
+
+                </li>
+
+
         </section>
         <script src=" /index.js "></script>
         </body>
