--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Piano Concert</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/desktop.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@300;400;600;700;900&family=Lato:wght@300&display=swap" rel="stylesheet">
 </head>
 <header>
 
@@ -82,39 +85,48 @@
 <section class="pattern-bg">
     <div class="desk-flex">
         <h3 class="white-design">Main Program</h3>
-        <div class="design-three"></div>
-        <div class="line-main-pg"></div>
+        <div class="artist-bottom-line"></div>
     </div>
     <div class="card-forum" id="my-forum"></div>
     <div class="see-detail">
         <a>See detail program</a>
     </div>
+    <div class="join-cc">
+        Join CC Global Summit 2015 </div>
 </section>
 <section class="player">
     <h2 class="Featured-artist">Featured Artists</h2>
-    <div class="design-two"></div>
+
     <div class="artist-bottom-line"></div>
     <div class="player-container" id="BTS">
-    </div>
 </section>
+<div class="join-dd">
+    <ul class="down-errow">
+        <li>More</li>
+        <li class="for-size"><img src="/images/arrow_down.png" alt=""></li>
+</div>
 <section class="for-partner">
     <h3 class="partner">Partners</h3>
-    <div class="design-three"></div>
-    <div class="line-partner"></div>
-    <ul class="burn" id="mozilla">
-        <li class="color-burn"><img src="images/mozilla.png" alt="partner-logo "></li>
-        <li class="color-burn"><img src="images/color-burn.png" alt="partner-logo "></li>
-        <li class="color-burn"><img src="images/rays.png " alt="partner-logo "></li>
-        <li class="color-burn"><img src="images/studio.png" alt="partner-logo "></li>
-        <li class="color-burn"><img src="images/piano logo.png" alt="partner-logo "></li>
-    </ul>
+    <div class="artist-bottom-line"></div>
+    <div class="for-width">
+        <ul class="burn" id="mozilla">
+            <li class="color-burn"><img src="images/mozilla.png" alt="partner-logo "></li>
+            <li class="color-burn"><img src="images/color-burn.png" alt="partner-logo "></li>
+            <li class="color-burn"><img src="images/rays.png " alt="partner-logo "></li>
+            <li class="color-burn"><img src="images/studio.png" alt="partner-logo "></li>
+            <li class="color-burn"><img src="images/piano logo.png" alt="partner-logo "></li>
+        </ul>
+    </div>
 </section>
 <section class="final-card">
-    <img src="images/piano logo.png" alt="piano-logo" class="music">
-    <div class="reserved ">
-        <p>2023 Creative Common Myanmar Center,somes right reserved</p>
-        <span>사랑하는 친구에게,오랜만에 펜을 들어 글을 쓰는 순간, 당신이 떠올랐습니다. 얼마나 그리웠던지 몰라요</span>
-    </div>
+    <ul class="for-footer">
+        <li><img src="images/piano logo.png" alt="piano-logo" class="music"></li>
+        <li class="move-display">
+            <p>2023 Creative Common Myanmar Center,somes right reserved<br> 사랑하는 친구에게,오랜만에 펜을 들어 글을 쓰는 순간, 당신이 떠올랐습니다. 얼마나 그리웠던지 몰라요</p>
+
+        </li>
+
+    </ul>
 </section>
 <script src=" /index.js"></script>
 </body>
