fix-stylelint-error

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -84,7 +84,7 @@
             <br><br> These extraordinary events showcased the power of music and unity within our own local community. Immerse yourself in the inspiring narratives of these memorable gatherings, where the spirit of music and the joy of cultural exchange
             seamlessly intertwined.
         </p>
-        <img class="align" src=" /images/piano logo.png " alt="music-logo">
+        <img class="align" id="align" src=" /images/piano logo.png " alt="music-logo">
         <hr>
         <section>
             <h2 class="event-concert">Discovers previous piano concert</h2>
