--- a/aboutpage.html
+++ b/aboutpage.html
@@ -65,7 +65,7 @@
             <h2>Hello pinao world!</h2>
             <h2>Piano Concert 2023</h2>
         </div>
-        <div class="lorem">
+        <div class="lorem" class="for-mobile">
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum tempore aliquid est minus odit vero facere necessitatibus voluptatem blanditiis, perferendis ducimus quo, cum fugit eligendi, sint vitae officiis. Nostrum cum sit quam consequuntur vel modi
                 nam distinctio architecto earum praesentium repellendus mollitia voluptatum voluptate cupidit
@@ -80,18 +80,17 @@
         <h2 class="event-concert">Piano Concert 2023 Event
         </h2>
         <div class="artist-bottom-line"></div>
-        <p class=" ipsum "> Delve into the captivating stories from our previous summer concerts held in diverse locations. Experience the mesmerizing melodies that filled the air, creating an enchanting ambiance for all attendees.
-            <br><br> These extraordinary events showcased the power of music and unity within our own local community. Immerse yourself in the inspiring narratives of these memorable gatherings, where the spirit of music and the joy of cultural exchange
-            seamlessly intertwined.
+        <p class=" ipsum "> Delve into the captivating stories from our previous summer concerts held in diverse locations.,
+            <br> Experience the mesmerizing melodies that filled the air, creating an enchanting ambiance for all attendees<br> These extraordinary events showcased the power of music and unity within our own local community
         </p>
         <img class="align" id="align" src=" /images/piano logo.png " alt="music-logo">
         <hr>
         <section>
             <h2 class="event-concert">Discovers previous piano concert</h2>
             <div class="artist-bottom-line"></div>
-            <p class="to-move">
+            <p class="to-center">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum sint quas fuga dignissimos expedita impedit possimus deserunt hic in facere?
-                <br><br> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus sapiente facilis beatae praesentium quia maiores! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi nesciunt et delectus, doloremque minus perspiciatis.
+
             </p>
             <div class="concert-photo">
                 <ul class="for-2022">
