--- a/index.html
+++ b/index.html
@@ -65,16 +65,17 @@
 
                 </ul>
             </nav>
-            <h4 class="first-content">Hello Piano World!</h4>
-            <div class="content">
-                <h1>PIANO CONCERT</h1>
-                <h1>GLOBAL SUMMIT</h1>
-                <h1>2023</h1>
+            <div class="cover">
+                <h4 class="first-content">Hello Piano World!</h4>
+                <div class="content" class="content-sec">
+                    <h1>PIANO CONCERT</h1>
+                    <h1>GLOBAL SUMMIT</h1>
+                    <h1>2023</h1>
+                </div>
             </div>
             <div class="lorem-border">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum tempore aliquid est minus odit vero facere necessitatibus voluptatem blanditiis, perferendis ducimus quo, cum fugit eligendi, sint vitae officiis. Nostrum cum sit quam consequuntur vel modi
-                    nam distinctio architecto earum praesentium repellendus mollitia voluptatum voluptate cupidit
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum tempore aliquid est minus odit vuiret87u
                 </p>
             </div>
             <p class="concert-time">28 July 2023 from 10:00 PM</p>
