Add-margin-bold

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -122,7 +122,7 @@
             <ul class="for-footer-sec">
                 <li><img src="images/piano logo.png" alt="piano-logo" class="music"></li>
                 <li class="move-display">
-                    <p>2023 Creative Common Myanmar Center,somes right reserved<br> 사랑하는 친구에게,오랜만에 펜을 들어 글을 쓰는 순간, 당신이 떠올랐습니다. 얼마나 그리웠던지 몰라요</p>
+                    <p class="for-color">2023 Creative Common Myanmar Center,somes right reserved<br> 사랑하는 친구에게,오랜만에 펜을 들어 글을 쓰는 순간, 당신이 떠올랐습니다. 얼마나 그리웠던지 몰라요</p>
 
                 </li>
 
