--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
             <div class="lorem-border">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum tempore aliquid est minus odit vuiret87u
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum tempore aliquid est minus odit vuiret87u Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, consequatur.
                 </p>
             </div>
             <p class="concert-time">28 July 2023 from 10:00 PM</p>
