--- a/aboutpage.html
+++ b/aboutpage.html
@@ -51,7 +51,7 @@
         <nav id="for-hamburger">
             <ul class="for-style">
                 <li>
-                    <img class="for-close" src="/images/close-button.png" alt="close-button" id="for-close-burger">
+                    <img class="for-close" src="./images/close-button.png" alt="close-button" id="for-close-burger">
                 </li>
                 <li><a href="index.html">Home</a></li>
                 <li>
@@ -94,14 +94,14 @@
             </p>
             <div class="concert-photo">
                 <ul class="for-2022">
-                    <li class="for-2023"> <img src="/images/2022 (1).jpeg " alt="2022 concert "></li>
-                    <li class="for-desk-img"><img src="/images/2022 (2).jpeg " alt="2023 concert "></li>
+                    <li class="for-2023"> <img src="./images/2022 (1).jpeg " alt="2022 concert "></li>
+                    <li class="for-desk-img"><img src="./images/2022 (2).jpeg " alt="2023 concert "></li>
                 </ul>
             </div>
             <div class="photo-sec">
                 <ul>
-                    <li class="for-summer"> <img src="/images/2022 (1).jpeg " alt="2022 concert "></li>
-                    <li class="for-2019"><img src="/images/2022 (2).jpeg " alt="2023 concert "></li>
+                    <li class="for-summer"> <img src="./images/2022 (1).jpeg " alt="2022 concert "></li>
+                    <li class="for-2019"><img src="./images/2022 (2).jpeg " alt="2023 concert "></li>
                 </ul>
             </div>
         </section>
@@ -120,7 +120,7 @@
         </section>
         <section class="final-card-sec">
             <ul class="for-footer-sec">
-                <li><img src="images/piano logo.png" alt="piano-logo" class="music"></li>
+                <li><img src="./images/piano logo.png" alt="piano-logo" class="music"></li>
                 <li class="move-display">
                     <p class="for-color">2023 Creative Common Myanmar Center,somes right reserved<br> 사랑하는 친구에게,오랜만에 펜을 들어 글을 쓰는 순간, 당신이 떠올랐습니다. 얼마나 그리웠던지 몰라요</p>
 
@@ -131,7 +131,7 @@
         <section class="card-sec">
 
             <ul class="for-footer">
-                <li><img src="images/piano logo.png" alt="piano-logo" class="footer-music"></li>
+                <li><img src="./images/piano logo.png" alt="piano-logo" class="footer-music"></li>
                 <li class="rights">
                     <p>2023 Creative Common Myanmar Center,somes right reserved</p>
 
