--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <nav id="for-hamburger" class="menu-hidden">
                 <ul class="for-style">
                     <li>
-                        <img class="for-close" src="/images/close-button.png" alt="close-button" id="for-close-burger">
+                        <img class="for-close" src="./images/close-button.png" alt="close-button" id="for-close-burger">
                     </li>
                     <li><a href="aboutpage.html" id=" ">About</a></li>
                     <li>
@@ -104,7 +104,7 @@
 <div class="join-dd">
     <ul class="down-errow">
         <li>More</li>
-        <li class="for-size"><img src="/images/arrow_down.png" alt=""></li>
+        <li class="for-size"><img src="./images/arrow_down.png" alt=""></li>
 </div>
 <section class="for-partner">
     <h3 class="partner">Partners</h3>
@@ -129,7 +129,7 @@
 
     </ul>
 </section>
-<script src=" /index.js"></script>
+<script src=" ./index.js"></script>
 </body>
 
 </html>
