--- a/aboutpage.html
+++ b/aboutpage.html
@@ -47,7 +47,7 @@
     </nav>
 
     <div class="dolphin">
-        <img src="/images/hamburger.svg" alt="" id="menu-two" onclick="toggleMenu()">
+        <img src="./images/hamburger.svg" alt="" id="menu-two" onclick="toggleMenu()">
         <nav id="for-hamburger">
             <ul class="for-style">
                 <li>
@@ -83,7 +83,7 @@
         <p class=" ipsum "> Delve into the captivating stories from our previous summer concerts held in diverse locations.,
             <br> Experience the mesmerizing melodies that filled the air, creating an enchanting ambiance for all attendees<br> These extraordinary events showcased the power of music and unity within our own local community
         </p>
-        <img class="align" id="align" src=" /images/piano logo.png " alt="music-logo">
+        <img class="align" id="align" src="./images/piano logo.png " alt="music-logo">
         <hr>
         <section>
             <h2 class="event-concert">Discovers previous piano concert</h2>
