--- a/aboutpage.html
+++ b/aboutpage.html
@@ -47,7 +47,7 @@
     </nav>
 
     <div class="dolphin">
-        <img src="./images/hamburger.svg" alt="" id="menu-two" onclick="toggleMenu()">
+        <img src="/images/hamburger.svg" alt="" id="menu-two" onclick="toggleMenu()">
         <nav id="for-hamburger">
             <ul class="for-style">
                 <li>
