--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <section class="concert-introduction">
         <div class="to-move">
-            <img src="../images/hamburger.svg" alt="" id="menu-two" onclick="toggleMenu()">
+            <img src="./images/hamburger.svg" alt="" id="menu-two" onclick="toggleMenu()">
             <nav id="for-hamburger" class="menu-hidden">
                 <ul class="for-style">
                     <li>
