Adjust-screen-size

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -81,7 +81,7 @@
         </h2>
         <div class="artist-bottom-line"></div>
         <p class=" ipsum "> Delve into the captivating stories from our previous summer concerts held in diverse locations.,
-            <br> Experience the mesmerizing melodies that filled the air, creating an enchanting ambiance for all attendees<br> These extraordinary events showcased the power of music and unity within our own local community
+            <br> Experience the mesmerizing melodies thatfor all attendees<br> These extraordinary events showcased the power of music and unity within our own local community
         </p>
         <img class="align" id="align" src="./images/piano logo.png " alt="music-logo">
         <hr>
@@ -89,7 +89,7 @@
             <h2 class="event-concert">Discovers previous piano concert</h2>
             <div class="artist-bottom-line"></div>
             <p class="to-center">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum sint quas fuga dignissimos expedita impedit possimus deserunt hic in facere?
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
 
             </p>
             <div class="concert-photo">
