--- a/aboutpage.html
+++ b/aboutpage.html
@@ -92,7 +92,7 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
 
             </p>
-            <div class="concert-photo">
+            <div class="concert-photo" class="concert">
                 <ul class="for-2022">
                     <li class="for-2023"> <img src="./images/2022 (1).jpeg " alt="2022 concert "></li>
                     <li class="for-desk-img"><img src="./images/2022 (2).jpeg " alt="2023 concert "></li>
