--- a/aboutpage.html
+++ b/aboutpage.html
@@ -99,9 +99,9 @@
                 </ul>
             </div>
             <div class="photo-sec">
-                <ul>
+                <ul class="layout">
                     <li class="for-summer"> <img src="./images/2022 (1).jpeg " alt="2022 concert "></li>
-                    <li class="for-2019"><img src="./images/2022 (2).jpeg " alt="2023 concert "></li>
+                    <li class="for-cold"> <img src="./images/2022 (2).jpeg " alt="2023 concert "></li>
                 </ul>
             </div>
         </section>
